# kvs-c

./: CMakeLists.txt  docker-compose.yml
CMake/: Utilities.cmake
build-relay/: CMakeCache.txt  Makefile  cmake_install.cmake  kvsFileLogFilter.2  kvsFileLogFilter.3  kvsFileLogFilter.4  kvsFileLogFilter.5  kvsFileLogFilter.6
build-relay/samples/: Makefile  cmake_install.cmake  discoverNatBehavior  kvsWebrtcClientMaster  kvsWebrtcClientViewer
certs/: server.key  server.pem
docs/: deployment-kvs-ngtcp2.md  kvs-ngtcp2-protocol.md  ngtcp2-signaling-feasibility.md
kvs-ngtcp2-server/: CMakeLists.txt  Dockerfile  README.md
kvs-ngtcp2-server/include/: kvs_ngtcp2_server.h  protocol.h  session.h
kvs-ngtcp2-server/src/: main.c  protocol.c  server.c  session.c
samples/: Common.c  kvsWebRTCClientMaster.c
scripts/: deploy-kvs-master.sh  deploy-kvs-ngtcp2-server.sh  deploy-kvs-viewer.sh  deploy-turnserver.sh  run-relay-local-no-docker.sh
src/include/com/amazonaws/kinesis/video/webrtcclient/: Include.h
src/source/Signaling/: Client.c  KvsNgtcp2Transport.c  KvsNgtcp2Transport.h  Signaling.c  Signaling.h  StateMachine.c
